--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.0.7
   get: ^4.6.5
+  quran: ^1.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
