--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  
+  audioplayers: ^5.0.0
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
@@ -52,6 +54,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
+    - assets/mp3/
   fonts:
     - family: Amiri
       fonts:
