--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,11 @@ flutter:
           weight: 700
         - asset: fonts/Amiri-BoldItalic.ttf
           style: italic
+    - family: Hafs
+      fonts:
+        - asset: fonts/Hafs.ttf
+    
+    
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
