--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_svg: ^2.0.7
   get: ^4.6.5
   just_audio: ^0.9.34
+  pdfx: ^2.4.0
   quran: ^1.2.2
 
 dev_dependencies:
@@ -54,6 +55,7 @@ flutter:
   assets:
     - assets/img/
     - assets/mp3/
+    - assets/pdf/
   fonts:
     - family: Amiri
       fonts:
