--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  adhan: ^2.0.0-nullsafety.2
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.7
+  geocoding: ^2.1.0
   get: ^4.6.5
+  intl: ^0.18.1
   just_audio: ^0.9.34
+  location: ^5.0.2+1
   pdfx: ^2.4.0
   quran: ^1.2.2
   shared_preferences: ^2.2.0
@@ -57,6 +61,7 @@ flutter:
     - assets/img/
     - assets/mp3/
     - assets/pdf/
+    - assets/icons/
   fonts:
     - family: Amiri
       fonts:
