add_qibla_feature

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_qiblah: ^2.2.0
   flutter_svg: ^2.0.7
   geocoding: ^2.1.0
+  geolocator: ^9.0.2
   get: ^4.6.5
   intl: ^0.18.1
   just_audio: ^0.9.34
