--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^15.1.0+1
   flutter_qiblah: ^2.2.0
   flutter_svg: ^2.0.7
   geocoding: ^2.1.0
@@ -43,6 +44,7 @@ dependencies:
   pdfx: ^2.4.0
   quran: ^1.2.2
   shared_preferences: ^2.2.0
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
